# OpenTracking

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WHY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  cli-reference.md  custom-benchmarks.md  getting-started.md  integration-guide.md
productivity_framework/: __init__.py  benchmark_table.py  classifier.py  cli.py  llm_classifier.py  rules.py  signals.py  tracker.py  types.py
productivity_framework/benchmarks/: defaults.yaml
productivity_framework/examples/: basic_usage.py  with_llm_fallback.py
productivity_framework/tests/: test_benchmarks.py  test_classifier.py  test_rules.py  test_signals.py  test_tracker.py
