[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-productivity-framework"
version = "0.1.0"
description = "Track how much time AI actually saves you. Classify conversations, measure productivity gains, get real numbers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Smalt AI"},
]
keywords = ["ai", "productivity", "time-tracking", "roi", "measurement", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.10.0"]
all = ["anthropic>=0.20.0", "openai>=1.10.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/ehtan-smaltai/OpenTracking"
Repository = "https://github.com/ehtan-smaltai/OpenTracking"
Issues = "https://github.com/ehtan-smaltai/OpenTracking/issues"

[project.scripts]
productivity-classify = "productivity_framework.cli:main"
productivity-summary = "productivity_framework.cli:summary_main"

[tool.setuptools.packages.find]
include = ["productivity_framework*"]

[tool.pytest.ini_options]
testpaths = ["productivity_framework/tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.format]
quote-style = "double"
